# orom-first-encounter

./: .gitignore  .gitmodules  CMakeLisits.txt  CMakeLists.txt
LinkingHelper/: link_runtime_static.cmake
include/game/: character_generation_stage.h  cursor_state.h  cursor_subsystem.h  game.h  game_stage.h  main_menu_stage.h
include/game/components/: components.h  position_component.h
include/game/shared/: shared_res.h  (+2 more)
include/graphics/: Sprite16.h  Sprite16a.h  Sprite256.h  font_renderer.h  font_rendering.h  framebuffer.h  soaspritergb.h  soaspritergba.h
include/loaders/: pngloader.h  registry_file.h  resource_file.h
include/util/: macro_shared.h
include/windowing/: window.h
modules/kaitai_struct/: CMakeLists.txt  LICENSE  README.md
modules/kaitai_struct/kaitai/: exceptions.h  kaitaistream.cpp  kaitaistream.h
src/: defer_action.h  framebuffer.cpp  macro_shared.h  main.cpp  pngloader.cpp  pngloader.h  soapritergba.h  soaspritergb.cpp  soaspritergb.h  soaspritergba.cpp
src/game/: character_generation_stage.cpp  cursor_subsystem.cpp  game.cpp  game_stage.cpp  main_menu_stage.cpp
src/globals/: globals.cpp  globals.h
src/graphics/: Sprite16.cpp  Sprite16a.cpp  Sprite256.cpp  font_renderer.cpp  font_rendering.cpp  framebuffer.cpp  soaspritergb.cpp  soaspritergba.cpp
src/loaders/: pngloader.cpp  pngloader.h  rage_of_mages_1_16.cpp  rage_of_mages_1_16a.cpp  rage_of_mages_1_256.cpp  rage_of_mages_1_alm.cpp  rage_of_mages_1_bmp.cpp  rage_of_mages_1_bmp.h  rage_of_mages_1_reg.cpp  rage_of_mages_1_reg.h  rage_of_mages_1_res.cpp  rage_of_mages_1_res.h  registry_file.cpp  registry_file.h  resource_file.cpp  resource_file.h
src/windowing/: window.cpp
(+23 files in other folders)
